--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-
   "name": "nick-custom-calendar-taro",
-  "version": "1.0.12",
+  "version": "1.0.14",
   "private": false,
   "description": "一款基于taro3的自定义日历组件，支持周，月的展示",
   "author": "0x00ZhouJialei",
@@ -12,10 +11,7 @@
     "react",
     "ts"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/0x00Zhoujialei/custom-calendar-taro.git"
-  },
+  "repository": "https://github.com/0x00Zhoujialei/custom-calendar-taro.git",
   "main": "index.ts",
   "types": "index.d.ts",
   "files": [
@@ -71,6 +67,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@babel/runtime": "^7.7.7",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@tarojs/components": "^3.0.0",
     "@tarojs/mini-runner": "^3.0.0",
     "@tarojs/react": "^3.0.0",
@@ -99,13 +97,11 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.78.1",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
+    "rollup-plugin-sass": "^1.2.13",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.33.0",
     "stylelint": "9.3.0",
     "ts-node": "^10.0.0",
-    "typescript": "^4.1.0",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "rollup-plugin-sass": "^1.2.13"
+    "typescript": "^4.1.0"
   }
 }
